tests/core/snapshots/n-plus-one-list.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(baseURL: "http://example.com", batch: {delay: 1, headers: [], maxSize: 1000}) {
  query: Query
}

type Bar {
  foo: [Foo] @http(batchPath: ["id"], path: "/foos", query: [{key: "id", value: "{{.value.fooId}}"}])
  fooId: Int!
  id: Int!
}

type Foo {
  bar: Bar @http(batchPath: ["fooId"], path: "/bars", query: [{key: "fooId", value: "{{.value.id}}"}])
  id: Int!
  name: String!
}

type Query {
  bars: [Bar] @http(path: "/bars")
  foos: [Foo] @http(path: "/foos")
}
