tests/core/snapshots/n-plus-one.md_client.snap
---
source: tests/core/spec.rs
expression: client
---
type Bar {
  foo: [Foo]
  fooId: Int!
  id: Int!
}

scalar BigInt

scalar Bytes

scalar Date

scalar Email

scalar Empty

type Foo {
  bar: Bar
  id: Int!
  name: String!
}

scalar JSON

scalar PhoneNumber

type Query {
  bars: [Bar]
  foos: [Foo]
}

scalar UnsignedInt

scalar Url

schema {
  query: Query
}
