tests/core/snapshots/nested-objects.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "address": {
          "geo": {
            "lat": "-37.3159"
          }
        }
      }
    }
  }
}
