tests/core/snapshots/nested-objects.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Address {
  geo: Geo
  street: String
}

type Geo {
  lat: String
  lng: String
}

type Query {
  user: User
}

type User {
  address: Address
}

schema {
  query: Query
}
