tests/core/snapshots/nesting-level3.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "post": {
        "user": {
          "todos": [
            {
              "completed": false
            },
            {
              "completed": false
            },
            {
              "completed": false
            },
            {
              "completed": true
            },
            {
              "completed": false
            },
            {
              "completed": false
            }
          ]
        }
      }
    }
  }
}
